# P.E.D.A.L

./: Makefile.am  README  acconfig.h  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  configure.in
doc/: Motion.txt  ParseTree.txt  arch.fig
examples/: testinput.pdl  testinput.pdo  testinput.rib
export-plugins/: Makefile.am  README
export-plugins/GL-exporter/: Makefile.am  pdl-gl.c
export-plugins/POV-exporter/: Makefile.am
export-plugins/RIB-exporter/: .cvsignore  Makefile.am  rib-pdl.c
include/: Makefile.am  README  geometry.h  plugins.h
primitive-libraries/: Makefile.am  README
src/: .cvsignore  .parsetree.c.swp  Makefile.am  exporters.c  grammar.c  grammar.h  grammar.y  icode.c  lexer.c  lexer.l  parsepdl.c  primitives.c  ptree.c  scope.c  symtab.c  types.c
src/include/: exporters.h  icode.h  nodestructures.h  parsepdl.h  primitives.h  ptree.h  scope.h  symtab.h  types.h
